name:                MySC-server
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/heroku-comment#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable heroku-comment-server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock
                     , transformers
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , monad-logger
                     , text
                     , pwstore-fast
                     , bytestring
                     , resourcet
                     , hvect
                     , time
                     , blaze-html
                     , clay
                     , aeson
                     , mysc-common
  other-modules:       DB
                     , DB.Comments
